Added Alex's changes. Added bus monitor widget, finished initial add new book and add file uplaod to it.