@@ -52,6 +52,7 @@
 		<version.gwt.recaptcha>1.0.0.Beta2</version.gwt.recaptcha>
 		<version.gwtquery>1.3.3</version.gwtquery>
 		<version.gwtquery.chosen>1.1.0</version.gwtquery.chosen>
+		<version.gwt.log>3.2.1</version.gwt.log>
 	</properties>
 
 	<repositories>
@@ -443,6 +444,11 @@
 				<version>${resteasy.version}</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.allen-sauer.gwt.log</groupId>
+				<artifactId>gwt-log</artifactId>
+				<version>${version.gwt.log}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -827,6 +833,10 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-cdi</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.allen-sauer.gwt.log</groupId>
+			<artifactId>gwt-log</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -874,14 +884,15 @@
 				<configuration>
 					<inplace>true</inplace>
 					<logLevel>INFO</logLevel>
-					<extraJvmArgs>-Xmx512m</extraJvmArgs>
+					<extraJvmArgs>-Xmx4096M -Xms1024M -XX:PermSize=128m -XX:MaxPermSize=256m</extraJvmArgs>
+					<!-- extraJvmArgs>-Xmx512m</extraJvmArgs -->
+					<!-- enableClosureCompiler>true</enableClosureCompiler -->
 
 					<!-- Configure GWT's development mode (formerly known as hosted mode) 
 						to not start the default server (embedded jetty), but to download the HTML 
 						host page from the configured runTarget. -->
 					<noServer>true</noServer>
-					<runTarget>http://localhost:8080/olhie/KitchenSink.html</runTarget>
-
+					<runTarget>http://localhost:8080/olhie/Olhie.html</runTarget>
 				</configuration>
 				<executions>
 					<execution>
